; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/riched20/extr_txtsrv.c_test_TxGetText.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/riched20/extr_txtsrv.c_test_TxGetText.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [46 x i8] c"ITextServices_TxGetText failed (result = %x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_TxGetText to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_TxGetText() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = call i32 @init_texthost(i32** %1, i32** %2)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  br label %23

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = call i64 @ITextServices_TxGetText(i32* %9, i32* %4)
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @S_OK, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @ok(i32 %14, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i64 %15)
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @SysFreeString(i32 %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @ITextServices_Release(i32* %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @ITextHost_Release(i32* %21)
  br label %23

23:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @init_texthost(i32**, i32**) #1

declare dso_local i64 @ITextServices_TxGetText(i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i32 @SysFreeString(i32) #1

declare dso_local i32 @ITextServices_Release(i32*) #1

declare dso_local i32 @ITextHost_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
